# nma-project

./: .gitignore  README.md  environment-allensdk.yml  environment.yml  pyproject.toml  requirements-allensdk-colab.txt  requirements-colab.txt
data/: README.md
notebooks/: 00_ingestion_smoke_test.ipynb  01_colab_drive_parquet_demo.ipynb  02_colab_drive_hit_miss_pca.ipynb  03_colab_allen_cohort_session_selection.ipynb  04_colab_hit_miss_coding_axis.ipynb
presentation/: Makefile  README.md  beamerthemeNMA.sty  demo.tex  internal-states-gating.tex
scripts/: analyze_manifest_engagement.py  audit_manifest_attrition.py  summarize_engaged_manifest.py
src/nma_data_ingestion/: __init__.py  allensdk_pipeline.py  cli.py  neuromatch.py
tests/: test_allensdk_pipeline.py  test_neuromatch.py
