[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nma-data-ingestion"
version = "0.1.0"
description = "Dataset ingestion helpers for the NMA Allen Visual Behavior project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
notebook = [
    "gdown",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "ipykernel",
]
allensdk = [
    "allensdk==2.16.2",
    "brain-observatory-utilities==0.5.1",
    "pynwb==2.8.3",
    "hdmf>=4,<5",
]
test = [
    "pytest",
]

[project.scripts]
nma-download-data = "nma_data_ingestion.cli:main"
nma-build-allen-parquet = "nma_data_ingestion.allensdk_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
